# sat_interface

./: .gitignore  CMakeLists.txt
include/: Journal.hpp  SatWrapper.hpp
src/: SatWrapper.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
